# two-isogenies

./: .gitignore  LICENSE  README.md
Theta-Rust/: Cargo.toml  README.md  gen_fp.sage  strategy.py
Theta-Rust/benches/: festa_chain.rs  isogeny_chain.rs  isogeny_chain_naive_strat.rs  msi.rs  no_strat.rs  sqi_chain.rs  util.rs
Theta-Rust/src/: eccore.rs  fields.rs  lib.rs  main.rs  theta.rs  theta_affine.rs
Theta-Rust/src/finitefield/: fp2_gen.rs  fp_gen.rs  mod.rs  utils64.rs
Theta-SageMath/: .gitignore  README.md  isogeny_diamond.py
Theta-SageMath/benchmarks/: benchmark_paper.py  benchmark_theta.py
Theta-SageMath/montgomery_isogenies/: isogenies_x_only.py  kummer_line.py
Theta-SageMath/richelot_isogenies/: divisor_arithmetic.py  richelot_isogenies.py
Theta-SageMath/tests/: arithmetic.py  test_SIDH_attack.py  test_isogeny.py  test_utils.py
Theta-SageMath/theta_isogenies/: gluing_isogeny.py  isogeny.py  isogeny_sqrt.py  isomorphism.py  morphism.py  product_isogeny.py  product_isogeny_sqrt.py
Theta-SageMath/theta_structures/: couple_point.py  dimension_one.py  dimension_two.py  product_structure.py  split_structure.py
Theta-SageMath/utilities/: batched_inversion.py  discrete_log.py  fast_sqrt.py  order.py  polynomial_inversion.py  strategy.py  supersingular.py  utils.py
